[gd_scene load_steps=10 format=2]

[ext_resource path="res://Entities/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/images/test.png" type="Texture" id=2]
[ext_resource path="res://Components/MoveToMouseClick.gd" type="Script" id=3]
[ext_resource path="res://Components/MoveToKeyboard.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 17, 24 )

[sub_resource type="Animation" id=2]

resource_name = "Walk Down"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]

resource_name = "Walk Left"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4, 3 ]
}

[sub_resource type="Animation" id=4]

resource_name = "Walk Right"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7, 6 ]
}

[sub_resource type="Animation" id=5]

resource_name = "Walk Up"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10, 9 ]
}

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 24, 24 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
region_rect = Rect2( 288, 0, 144, 192 )
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 24, 24 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/Walk Down" = SubResource( 2 )
"anims/Walk Left" = SubResource( 3 )
"anims/Walk Right" = SubResource( 4 )
"anims/Walk Up" = SubResource( 5 )
blend_times = [  ]

[node name="MoveToMouseClick" type="Node2D" parent="." index="3"]

script = ExtResource( 3 )
speed = 500

[node name="MoveToKeyboard" type="Node2D" parent="." index="4"]

script = ExtResource( 4 )
speed = 500

[connection signal="facing_new_direction" from="MoveToMouseClick" to="." method="_on_facing_new_direction"]

[connection signal="reached_destination" from="MoveToMouseClick" to="." method="_on_reached_destination"]

[connection signal="cancel_destination" from="MoveToKeyboard" to="." method="_on_MoveToKeyboard_cancel_destination"]

[connection signal="facing_new_direction" from="MoveToKeyboard" to="." method="_on_facing_new_direction"]

[connection signal="reached_destination" from="MoveToKeyboard" to="." method="_on_reached_destination"]


